# NSU-Industrial-CPP-2025-course

./: .gitignore
.github/workflows/: cmake-single-platform.yml
lab-1/: .clang-format  .clang-tidy  CMakeLists.txt  build.sh
lab-1/compressor/: CMakeLists.txt
lab-1/compressor/src/: compressor.cpp
lab-1/libcompressor/: CMakeLists.txt
lab-1/libcompressor/include/libcompressor/: libcompressor.hpp
lab-1/libcompressor/src/: libcompressor.cpp
lab-1/libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
lab-2/: .clang-tidy
lab-2/include/: utils.h
lab-2/include/regex/: AST.h  Lexer.h  Matcher.h  Parser.h
lab-2/src/: main.cpp  utils.cpp
lab-2/src/regex/: AST.cpp  Lexer.cpp  Matcher.cpp  Parser.cpp
lab-2/tests/: test_regex.cpp
lab-3/: CMakeLists.txt
lab-3/include/regex/: AST.h
lab-3/src/regex/: Lexer.cpp  Matcher.cpp  Parser.cpp
lab-3/tests/: CMakeLists.txt
